@@ -1,12 +1,13 @@
 package dev.hobie.employee_service.repository;
 
-import org.junit.jupiter.api.Assertions;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
+import dev.hobie.employee_service.model.Employee;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
-
-import dev.hobie.employee_service.model.Employee;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 class EmployeeRepositoryTest {
@@ -18,39 +19,39 @@ class EmployeeRepositoryTest {
   void testAddEmployee() {
     var employee = new Employee(1L, 1L, "Test Test", 100, "Test");
     employee = repository.add(employee);
-    Assertions.assertNotNull(employee);
-    Assertions.assertEquals(1L, employee.getId());
+    assertNotNull(employee, "Employee is null.");
+    assertEquals(1L, employee.id(), "Employee bad id.");
   }
 
   @Test
   @Order(2)
   void testFindAll() {
     var employees = repository.findAll();
-    Assertions.assertEquals(1, employees.size());
-    Assertions.assertEquals(1L, employees.get(0).getId());
+    assertEquals(1, employees.size(), "Employees size is wrong.");
+    assertEquals(1L, employees.getFirst().id(), "Employee bad id.");
   }
 
   @Test
   @Order(3)
   void testFindByDepartment() {
     var employees = repository.findByDepartment(1L);
-    Assertions.assertEquals(1, employees.size());
-    Assertions.assertEquals(1L, employees.get(0).getId());
+    assertEquals(1, employees.size(), "Employees size is wrong.");
+    assertEquals(1L, employees.getFirst().id(), "Employee bad id.");
   }
 
   @Test
   @Order(4)
   void testFindByOrganization() {
     var employees = repository.findByOrganization(1L);
-    Assertions.assertEquals(1, employees.size());
-    Assertions.assertEquals(1L, employees.get(0).getId());
+    assertEquals(1, employees.size(), "Employees size is wrong.");
+    assertEquals(1L, employees.getFirst().id(), "Employee bad id.");
   }
 
   @Test
   @Order(5)
   void testFindById() {
     var employee = repository.findById(1L);
-    Assertions.assertNotNull(employee);
-    Assertions.assertEquals(1L, employee.getId());
+    assertNotNull(employee, "Employee not found.");
+    assertEquals(1L, employee.id(), "Employee bad id.");
   }
 }
